Nav and container overlapping fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -90,6 +90,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   max-width: 65%;
+  z-index: -1;
 }
 
 .thumbnails img {
